@@ -85,6 +85,10 @@
       \code{utils::modifyList()} gets a new argument \code{keep.null}
       allowing \code{NULL} components in the replacement to be retained,
       instead of causing corresponding components to be deleted.
+
+      \item \code{combn(x, simplify = TRUE)} now gives a factor result
+      for factor input \code{x} (previously user error).
+      (Related to \PR{15442}.)
     }
   }
 
